--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -1,12 +1,12 @@
 ﻿@page "/counter"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Licznik_Kliknięć</PageTitle>
 
-<h1>Counter</h1>
+<h1>Licznik kliknięć</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p role="status">Liczba kliknięć: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Kliknij</button>
 
 @code {
     private int currentCount = 0;
