--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -1,5 +1,6 @@
 ﻿@page "/fetchdata"
 @using Client.Components
+<PageTitle>Kalkulator</PageTitle>
 <h1 class="wsp-red">Dodawanie</h1>
 <MathCalculations OperationType="dodawanie" />
 <h1 class="wsp-red">Mnożenie</h1>
